# Apotropaios-Firewall-Manager-Python-Variant

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DEVELOPMENT_GUIDE.md  Frequently_Asked_Questions_(FAQ).md  LICENSE  Makefile  README.md  SECURITY.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  apotropaios.py  coverage.json  mypy.json  pyproject.toml  tests.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  platform_support.yml
.github/workflows/: ci.yml  codeql.yml  docs-validate.yml  release.yml  security.yml
apotropaios/: __init__.py  __main__.py  cli.py
apotropaios/backup/: __init__.py  backup.py  immutable.py  restore.py
apotropaios/conf/: apotropaios.conf
apotropaios/core/: __init__.py  constants.py  errors.py  logging.py  security.py  utils.py  validation.py
apotropaios/detection/: __init__.py  fw_detect.py  os_detect.py
apotropaios/firewall/: __init__.py  base.py  common.py  firewalld.py  ipset.py  iptables.py  nftables.py  ufw.py
apotropaios/install/: __init__.py  installer.py
apotropaios/menu/: __init__.py  help_system.py  main.py
apotropaios/rules/: __init__.py  engine.py  import_export.py  index.py  state.py
scripts/: check_version_consistency.py  validate_docs.py
tests/: __init__.py  conftest.py
tests/ci/: __init__.py  test_workflows.py
tests/fixtures/: __init__.py
tests/helpers/: __init__.py
tests/integration/: __init__.py  test_cli.py  test_lifecycle.py
tests/security/: __init__.py  test_injection.py
tests/unit/: __init__.py  test_audit_regressions.py  test_backend_validation.py  test_backends.py  test_constants.py  test_detection.py  test_errors.py  test_install_interrupt.py  test_logging.py  test_rule_engine.py  test_security.py  test_utils.py  test_validation.py
